# GenCodeRAG

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  logger.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py
.github/workflows/: ci.yml
app/: streamlit_app.py
core/: __init__.py  embeddings.py  llm.py  prompts.py  retrieval.py
faiss/: embed_chunks_faiss.py
gencoderag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
legacy/faiss/: embed_chunks_faiss.py
model/: final_rag_system.py
pipeline/: clean_code.py  github_scraper.py  parser_utils.py  prepare_dataset.py  repo_cloner.py
qdrant/: embed_chunks_qdrant  embed_chunks_qdrant.py
tests/: test_clean_code.py  test_language_detection.py  test_parser_utils.py  test_qdrant_search.py  test_repo_cloner.py
